# RFC-sim

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cfg_parser.h  main.cpp  mrf.h  opt  reg_operand.h  rfc-sim  rfc.h  test.cpp  trace_inst.h  trace_instr.h  trace_opcode.h  trace_parser.h  utils.h
Configs/: alloc.cfg  example.cfg
configs/: cfg.yaml  example.cfg
configs/2-way/: cpl_fifo_wb.yaml  cpl_fifo_wt.yaml  cpl_lru_wb.yaml  cpl_lru_wt.yaml  cst_fifo_wb.yaml  cst_fifo_wt.yaml  cst_lru_wb.yaml  cst_lru_wt.yaml
configs/2-way_128/: cpl_lru_wt.yaml  cst_fifo_wb.yaml  cst_fifo_wt.yaml  cst_lru_wb.yaml  cst_lru_wt.yaml
configs/2w-128b/: 2_way-128b-cpl-itl.yaml  2_way-128b-cpl-ln.yaml  2_way-128b-write-itl.yaml  cpl_fifo_wb.yaml  cpl_fifo_wt.yaml  cpl_lru_wb.yaml  cst_fifo_wt.yaml  cst_lru_wb.yaml  cst_lru_wt.yaml
configs/2w-32b/: 2_way-32b-cpl-itl.yaml  2_way-32b-cpl-ln.yaml  2_way-32b-write-itl.yaml  cst_fifo_wb.yaml  cst_fifo_wt.yaml  cst_lru_wb.yaml  cst_lru_wt.yaml
configs/4w-128b/: 4_way-128b-cpl-itl.yaml  4_way-128b-cpl-ln.yaml  (+1 more)
include/: Alloc.h  AsmParser.h  CfgParser.h  Instr.h  Logger.h  Mrf.h  Oprd.h  RegOprd.h  Rfc.h  Stat.h  TraceInst.h  TraceOpcode.h  TraceParser.h  Util.h  cam.h  cfg_parser.h  mrf.h  reg_operand.h  reuse_info.h  rfc.h  trace_inst.h  trace_opcode.h  trace_parser.h  utils.h
scripts/: run-cutlass-gemm-fp16.sh  run-cutlass.sh  run-rodinia.sh
src/: Alloc.cpp  AsmParser.cpp  CfgParser.cpp  Logger.cpp  Mrf.cpp  Rfc.cpp  Stat.cpp  TraceParser.cpp  main.cpp  mrf.cpp  stat.cpp
unittest/: test_sass.cpp
(+33 files in other folders)
